# krishirakshak-project

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  KrishiRakshak_Demo.ipynb  Krishi_Rakshak_app.ipynb  README.md  pyproject.toml  requirements.prod.txt  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: cd.yml  ci.yml  deploy.yml  model_retrain.yml  scheduled-ingest.yml
bge-m3-deploy/: cloudwatch_logs.py  deployment.py  inference.py  requirements.txt  smoke_test.py
configs/: app_config.yaml  knowledge_base.json  model_config.yaml  monitoring_config.yaml  sarvam_config.yaml
docs/: API_SPEC.md  ARCHITECTURE.md  DEMO_SCRIPT.md  MODELS.md  PRODUCTION.md  pending_pdf_downloads.md
efficientnet-deploy/: deployment.py  inference.py  pack_model.sh  smoke_test.py
frontend/: streamlit_app.py
infra/: taskdef-api.json  taskdef-ui.json
infrastructure/docker/: Dockerfile.api  Dockerfile.training  docker-compose.yml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: cleanup.sh  create_realtime_endpoint.py  delete_endpoint.py  deploy.ps1  deploy.sh  docker_deploy.py  download_dataset.sh  download_docs.sh  ecr_auth.py  fetch_index.py  ingest_docs.sh  ingest_pipeline.py  provision.py  run_local.sh  setup_aws.sh  setup_monitoring.py  start.sh  warmup_endpoint.sh
src/agent/: graph.py  state.py  tools.py
src/api/: main.py  middleware.py  routes.py  schemas.py
training/: evaluate_model.py  fine_tune_florence.py  prepare_dataset.py  push_to_sagemaker.py  training_config.yaml  treatment_kb.json
(+27 files in other folders)
